latest post added

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 
 
        <!-- join our forum -->
-        <section class="mt-10">
-          <div class="hero bg-[#12132D] min-h-screen">
+        <section class="mt-10 ">
+          <div class="hero bg-[#12132D] rounded-lg ">
             <div class="hero-content flex-col lg:flex-row-reverse">
               <img
                 src="/images/joinforum.png"
@@ -146,6 +146,22 @@
           </div>
 
         </section>
+
+        <!-- latest posts -->
+         <section class="mt-10">
+          <div class="text-center space-y-4">
+            <h1 class="text-4xl font-extrabold ">Latest Post</h1>
+            <p >Yes, you can run unit tests and view the results directly within the app. <br> The integrated testing features allow for a streamlined .</p>
+          </div>
+
+         </section>
+         <!-- latest card -->
+          <section>
+            <div id="latest-card" class="flex justify-center mt-10 gap-2">
+              
+            </div>
+            
+          </section>
 
 
 
