--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
        <h1 class="text-4xl font-extrabold">Let's Discuss</h1>
        <p>Yes, you can run unit tests and view  the results directly within the app. The <br> integrated testing features allow for a streamlined .</p>
       </div>
+      <!-- spinner -->
+       <div id="toggle-spinner" class="text-center hidden">
+        <span class="loading loading-bars loading-lg"></span>
+       </div>
       <!-- discussion card section -->
        <section onclick="clickCount()" id="click-button" class="flex flex-col lg:flex-row justify-center mt-10 gap-10">
         <!-- cards -->
