--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <p class="py-6 text-white">
                   Share your favorite opinion and win and wp forum coffee mug! Yes, you can run unit tests and view the results directly within the app. 
                 </p>
-                <button class="btn btn-primary font-extrabold bg-[#797DFC] rounded-full px-10">Registered Now</button>
+                <button class="btn btn-primary font-extrabold border-none  bg-[#797DFC] rounded-full px-10">Registered Now</button>
               </div>
             </div>
           </div>
